--- a/README
+++ b/README
@@ -1,7 +1,10 @@
+Lee Robinson - 416495 - Internet and Open Source - Assignment 2 - Basic Ruby on Rails Application for LJMU holiday request system.
+
 This LJMU Holiday Request application allows a user to create, edit, view and delete their own holiday requests. An admin also has the same abilities with the added feature of being able to approve a request. 
 
-One user is unable to edit or delete another's request. The admin is unable to create a holiday request. When the admin approves a holiday request the information remains as the holiday request maker's username. The users are
-unable to try and approve their holiday request. Once a holiday request has been approved the ability to edit the holiday request is no longer allowed.
+One user is unable to edit or delete another's request however they can view it. The admin is unable to create a holiday request. When the admin approves a holiday request the information remains as the holiday request maker's username. The users are unable to try and approve their holiday request and are unable to access it. The only contact they have with the approved section is on show and index when the status of the approved is displayed. Once a holiday request has been approved the ability to edit the holiday request is no longer allowed for both user and admin. The request only has the ability to delete once the approved is true.
+
+Each hyperlink on the application works as expected and there are no dead hyperlinks. Each page has been appropiately named.
 
 Some example details for logging in are written below.
 
@@ -14,7 +17,10 @@ Password: test
 Username: leerobinson
 Password: usualpass
 
-In the work directory of this repository is where the workflow map and database schema's are stored. The database schema stores the information about both tables (holidays and users). The workflow map shows the navigation and
-abilities of the users/admin which are possible to them. This will highlight the differences in option the users and admin have in different scenarios.
+In the work directory of this repository is where the workflow map and database schema's are stored. These include both original Balsamiq files, both PNG files of the mock ups and both PDF's of the mock up.
 
-Flash messages display on certain events such as new user being created, new holiday request and so on. 
+The database schema stores the information about both tables (holidays and users). The holidays table and users table are related through the user_id which is initialized when a user is created.
+
+The workflow map shows the navigation and abilities of the users/admin which are possible to them. This will highlight the differences in option the users and admin have in different scenarios using different coloured arrows and highlighting certain areas. For the benefit of the reader the red arrows are actions that all users can do, the green is what the admin will see only, the blue is the users only and the orange is the current user and the admin. 
+
+Flash messages display on certain events such as new user being created, new holiday request and so on. These are a way of informing the user that an event has occurred rather than having a user wonder if something has happened.
